Initial working implementation of game of life

--- a/drawing.html
+++ b/drawing.html
@@ -2,13 +2,17 @@
 <html>
 <head>
     <script src="graphics.js"></script>
+    <script src="board.js"></script>
+	<script src="cell.js"></script>
     <style>
         #canvas_container {position: absolute; left: 100px; top: 100px; width: 400px; height: 400px;}
+
     </style>
 </head>
 
 <body>
 
+<p>Conway's Game of Life </p>
 <!--
 define the HTML canvas element that will hold the graphical output
 -->
@@ -20,6 +24,7 @@ define the HTML canvas element that will hold the graphical output
 execute the JavaScript
 -->
 <script src="basic_drawing.js"></script>
+
 
 </body>
 </html>
