--- a/drawing.html
+++ b/drawing.html
@@ -21,7 +21,7 @@ define the HTML canvas element that will hold the graphical output
 <!--
 execute the JavaScript
 -->
-<script src="basic_drawing.js"></script>
+<script src="gameOfLife.js"></script>
 
 </body>
 </html>
