Added speed feature and updated Readme

--- a/drawing.html
+++ b/drawing.html
@@ -18,12 +18,8 @@
 
 <input type="button" value="Start game" id="startButton" >
 <input type="button" value="Stop game" id="stopButton" >
-
-
-<!--
-define the HTML canvas element that will hold the graphical output
--->
-
+<p>Seconds between generation</p> 
+<input type="text" name="Speed" value="1" id="speedButton" type="number">
 
 <!--
 execute the JavaScript
